--- a/index.html
+++ b/index.html
@@ -129,8 +129,11 @@
     <section>
         <h2>Über mich</h2>
         <p>
-            Hallo! Mein Name ist Jasmin Röder. Ich helfe Ihnen dabei, moderne Technik besser zu verstehen und sicher anzuwenden.
-            Ob Smartphone, Computer oder Internet – gemeinsam finden wir den einfachsten Weg.
+            Hallo! <br>
+            Mein Name ist Jasmin Röder und ich bin 24 Jahre alt. Momentan studiere ich Informatik an der THM in Gießen und habe großes Interesse daran Ihnen dabei zu helfen 
+            mit den tückischen Geräten der Moderne besser klar zu kommen. Es macht mir großen Spaß anderen zu helfen und mich mit ihnen gemeinsam über erzielte Erfolge zu freuen. <br>
+            Seitdem ich denken kann sind Computer und Handys ein wichtiger Bestandteil meines Lebens und den bequemsten Umgang damit zu finden könnte ich schon beinahe als Hobby bezeichnen. <br>
+            
         </p>
     </section>
 
@@ -138,7 +141,9 @@
         <h2>Mein Angebot</h2>
         <p>
             Ich biete private Nachhilfe im Umgang mit Technik an. Ob es nun ein konkretes Problem ist, oder der Umgang mit Ihrem Gerät im Allgemeinen.
-            Dabei gehe ich individuell auf Ihre Fragen ein und versuche die bestmöglichste Lösung für Sie zu finden!
+            Dabei gehe ich individuell auf Ihre Fragen ein und versuche die bestmögliche Lösung für Sie zu finden. <br>
+            Ich helfe Ihnen gerne dabei, moderne Technik besser zu verstehen und sicher anzuwenden.
+            Ob Smartphone, Computer oder Internet – gemeinsam finden wir den einfachsten Weg.
         </p>
     </section>
 
@@ -147,7 +152,7 @@
         <h2>Preise</h2>
         <p>
             Für die private Nachhilfe nehme ich 15€/Std.<br>
-            Außerdem berechne ich für den Hin- und Rückweg eine Pauschale abhängig vom aktuellen Spritpreis (stand 29.09.2025 ~1,70€/l) und meinem Vebrauch (ca. 8liter/100 km), so dass die Kosten im Preis enthalten sind. <br>
+            Außerdem berechne ich für den Hin- und Rückweg eine Pauschale abhängig vom aktuellen Spritpreis (stand 29.09.2025 ~1,70€/l) und meinem Vebrauch (ca. 8l/100 km), so dass die Kosten im Preis enthalten sind. <br>
             Der Betrag nach dem Komma wird aufgerundet,
             da ich für die Fahrtkosten lediglich den Preis des Benzins berechne und daraus keinen Gewinn schlage. Beispielsweise würde eine Entfernung von 40km einen Preis von 10,88€ bedeuten, welcher auf 11€ gerundet wird.
             Im Fahrtkostenrechner können Sie herausfinden wie viel die Fahrt bis zu Ihnen kosten würde. Dafür müssen Sie die Entfernung von Ihnen bis zu meinem Wohnort 63667 Ulfa eingeben.
@@ -174,7 +179,7 @@
     <section>
         <h2>Kontakt</h2>
         <p>
-            Haben Sie Interesse oder Fragen? Dann melden Sie sich gerne bei mir:
+            Haben Sie Fragen oder Interesse? Dann melden Sie sich gerne bei mir:
         </p>
         <p>
             📧 <a href="mailto:jasminroeder001@gmail.com">jasminroeder001@gmail.com</a><br>
