--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             Hallo! <br>
             Mein Name ist Jasmin Röder und ich bin 24 Jahre alt. Momentan studiere ich Informatik an der THM in Gießen und habe großes Interesse daran Ihnen dabei zu helfen 
             mit den tückischen Geräten der Moderne besser klar zu kommen. Es macht mir großen Spaß anderen zu helfen und mich mit ihnen gemeinsam über erzielte Erfolge zu freuen. <br>
-            Seitdem ich denken kann sind Computer und Handys ein wichtiger Bestandteil meines Lebens und den bequemsten Umgang damit zu finden könnte ich schon beinahe als Hobby bezeichnen. <br>
+            Seitdem ich denken kann sind Computer und Handys ein wichtiger Bestandteil meines Lebens und den bequemsten Umgang damit zu finden, könnte ich schon beinahe als Hobby bezeichnen. <br>
             
         </p>
     </section>
