--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
         <h2>Über mich</h2>
         <p>
             Hallo! <br>
-            Mein Name ist Jasmin Röder und ich bin 24 Jahre alt. Momentan studiere ich Informatik an der THM in Gießen und habe großes Interesse daran Ihnen dabei zu helfen 
+            Mein Name ist Jasmin Röder und ich bin 24 Jahre alt. Momentan studiere ich Informatik an der THM in Gießen. Ich würde Sie gerne dabei unterstützen 
             mit den tückischen Geräten der Moderne besser klar zu kommen. Es macht mir großen Spaß anderen zu helfen und mich mit ihnen gemeinsam über erzielte Erfolge zu freuen. <br>
-            Seitdem ich denken kann sind Computer und Handys ein wichtiger Bestandteil meines Lebens und den bequemsten Umgang damit zu finden, könnte ich schon beinahe als Hobby bezeichnen. <br>
+            Seitdem ich denken kann sind Computer und Handys ein wichtiger Bestandteil meines Lebens. Und den bequemsten Umgang damit zu finden, könnte ich schon beinahe als Hobby bezeichnen. <br>
             
         </p>
     </section>
@@ -152,7 +152,7 @@
         <h2>Preise</h2>
         <p>
             Für die private Nachhilfe nehme ich 15€/Std.<br>
-            Außerdem berechne ich für den Hin- und Rückweg eine Pauschale abhängig vom aktuellen Spritpreis (stand 29.09.2025 ~1,70€/l) und meinem Vebrauch (ca. 8l/100 km), so dass die Kosten im Preis enthalten sind. <br>
+            Außerdem berechne ich für den Hin- und Rückweg eine Pauschale für die Spritkosten. Diese Pauschale errechnet sich aus aktuellem Spritpreis (stand 29.09.2025 ~1,70€/l) und meinem Vebrauch (ca. 8l/100 km). <br>
             Der Betrag nach dem Komma wird aufgerundet,
             da ich für die Fahrtkosten lediglich den Preis des Benzins berechne und daraus keinen Gewinn schlage. Beispielsweise würde eine Entfernung von 40km einen Preis von 10,88€ bedeuten, welcher auf 11€ gerundet wird.
             Im Fahrtkostenrechner können Sie herausfinden wie viel die Fahrt bis zu Ihnen kosten würde. Dafür müssen Sie die Entfernung von Ihnen bis zu meinem Wohnort 63667 Ulfa eingeben.
