--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             Für die private Nachhilfe nehme ich 15€/Std.<br>
             Außerdem berechne ich für den Hin- und Rückweg eine Pauschale für die Spritkosten. Diese Pauschale errechnet sich aus aktuellem Spritpreis (stand 29.09.2025 ~1,70€/l) und meinem Vebrauch (ca. 8l/100 km). <br>
             Der Betrag nach dem Komma wird aufgerundet,
-            da ich für die Fahrtkosten lediglich den Preis des Benzins berechne und daraus keinen Gewinn schlage. Beispielsweise würde eine Entfernung von 40km einen Preis von 10,88€ bedeuten, welcher auf 11€ gerundet wird.
+            da ich für die Fahrtkosten lediglich den Preis des Benzins berechne und daraus keinen Gewinn schlage. Beispielsweise würde eine Entfernung von 40km einen Preis von 10,88€ bedeuten, welcher auf 11€ gerundet wird.<br>
             Im Fahrtkostenrechner können Sie herausfinden wie viel die Fahrt bis zu Ihnen kosten würde. Dafür müssen Sie die Entfernung von Ihnen bis zu meinem Wohnort 63667 Ulfa eingeben.
             <p>
             (Mit einem Klick auf ➡️ <a href="https://www.google.com/maps/dir/63667+Nidda-Ulfa//@50.46266,8.9666039,13z/data=!4m8!4m7!1m5!1m1!1s0x47bce664b7d6d755:0x4d68d4da23170d72!2m2!1d9.0078891!2d50.4626127!1m0?entry=ttu&g_ep=EgoyMDI1MDkyNC4wIKXMDSoASAFQAw%3D%3D">Google Maps</a> ⬅️ können Sie Ihre Entfernung zu mir herausfinden.)
