--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <h2>Preise</h2>
         <p>
             Für die private Nachhilfe nehme ich 15€/Std.<br>
-            Außerdem berechne ich für den Hin- und Rückweg eine Pauschale für die Spritkosten. Diese Pauschale errechnet sich aus aktuellem Spritpreis (stand 29.09.2025 ~1,70€/l) und meinem Vebrauch (ca. 8l/100 km). <br>
+            Außerdem berechne ich für den Hin- und Rückweg eine Pauschale für die Spritkosten. Diese Pauschale errechnet sich aus aktuellem Spritpreis (stand 29.09.2025 ~1,70€/l) und meinem Verbrauch (ca. 8l/100 km). <br>
             Der Betrag nach dem Komma wird aufgerundet,
             da ich für die Fahrtkosten lediglich den Preis des Benzins berechne und daraus keinen Gewinn schlage. Beispielsweise würde eine Entfernung von 40km einen Preis von 10,88€ bedeuten, welcher auf 11€ gerundet wird.<br>
             Im Fahrtkostenrechner können Sie herausfinden wie viel die Fahrt bis zu Ihnen kosten würde. Dafür müssen Sie die Entfernung von Ihnen bis zu meinem Wohnort 63667 Ulfa eingeben.
